# OpenEF

./: .gitignore  CMakeLists.txt
cmake/Modules/: InstallConfig.cmake
code/: CMakeLists.txt
code/client/: cl_cgame.cpp  cl_cin.cpp  cl_input.cpp  cl_main.cpp  cl_scrn.cpp  client.h
code/game/: g_public.h
code/qcommon/: cm_load.cpp  common.cpp  msg.cpp  ojk_saved_game.cpp  q_shared.h  qcommon.h  qfiles_q3bsp.h  stringed_ingame.cpp  strip.cpp
code/rd-vanilla/: tr_bsp.cpp  tr_shader.cpp
code/server/: server.h  sv_ccmds.cpp  sv_game.cpp  sv_game_sp_ef.cpp  sv_init.cpp  sv_snapshot.cpp  sv_world.cpp
code/ui/: ui_main.cpp
codeEF/cgame/: cg_camera.cpp  cg_draw.cpp  cg_ents.cpp  cg_event.cpp  cg_gi_compat.cpp  cg_info.cpp  cg_main.cpp  cg_players.cpp  cg_scoreboard.cpp  cg_snapshot.cpp  cg_syscalls.cpp  cg_text.cpp  cg_weapons.cpp  fx_transporter.cpp
codeEF/game/: CMakeLists.txt  Q3_Interface.cpp  bg_misc.cpp  bg_public.h  g_active.cpp  g_camera.cpp  g_combat.cpp  g_functions.cpp  g_items.cpp  g_main.cpp  g_objectives.cpp  g_public.h  g_shared.h  g_spawn.cpp  g_utils.cpp  g_weapon.cpp  q_shared.h
codeEF/icarus/: BlockStream.cpp
codeEF/qcommon/: game_version.h  qcommon.h  sp_types.h
codeEF/speedrun/: sound_skipping.cpp
codeEF/ui/: gameinfo.cpp  ui_atoms.cpp  ui_local.h  ui_players.cpp
codeEF/win32/: game.rc  resource.h
